--- a/views/index/about.ejs
+++ b/views/index/about.ejs
@@ -1,11 +1,11 @@
 ﻿<h1>Sobre nós</h1>
 
-<h3>O projeto desse site foi criado para se ter um lugar para postarem artes de forma geral, seja uma arte famosa que a pessoa gosta, ou uma arte autoral que ele gostaria que outras pessoas vissem</h3>
+<h2>O projeto desse site foi criado para se ter um lugar para postarem artes de forma geral, seja uma arte famosa que a pessoa gosta, ou uma arte autoral que ele gostaria que outras pessoas vissem</h2>
 
-<p>Projeto Interdisciplinar II - ESPM TECH / 2º semestre</p>
+<p style="margin-left: 50px;">Projeto Interdisciplinar II - ESPM TECH / 2º semestre</p>
 
 <div class="container-fluid container" style="max-width: 1000px;">
-    <h2>Integrantes</h2>
+    <h3>Integrantes</h3>
     <div class="row">
         <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
             <div class="ficha">
@@ -45,7 +45,6 @@
     
 </div>
 
-<h2>Integrantes do grupo:</h2>
 
 <%- contentFor("pos-styles") %>
 <style type="text/css">
@@ -62,6 +61,12 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 900;
+    padding-left: 50px;
+}
+
+h2 {
+    font-size: 1.7em;
+    margin: 0 50px 10px;
 }
 
 </style>
