--- a/views/index/explore.ejs
+++ b/views/index/explore.ejs
@@ -2,7 +2,7 @@
 
 <h2>Conheça nossos diferentes artistas</h2>
 
-<h3>Surrealistas</h3>
+<h3>Pinturas</h3>
 
 <div class="glide espacamento" id="glide1">
     <div class="glide__track" data-glide-el="track">
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <h3>Fotografia</h3>
+  <h3>Arte Digital</h3>
 
   <div class="glide espacamento" id="glide2">
     <div class="glide__track" data-glide-el="track">
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <h3>Artista 3</h3>
+  <h3>Fotografia</h3>
   <div class="glide espacamento" id="glide3">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
@@ -68,6 +68,7 @@
     </div>
   </div>
 
+  <h3>3D</h3>
 
 
 <%- contentFor("styles") %>
@@ -100,6 +101,7 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 900;
+    padding-left: 50px;
 }
 
  h2 {
@@ -110,6 +112,8 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 700;
+    padding-left: 50px;
+    padding-bottom: 25px;
 }
 h3 {
     opacity: 0.5;
@@ -120,6 +124,8 @@ h3 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 600;
+    padding-left: 25px;
+    padding-bottom: 10px;
 }
 
 img{
