--- a/views/index/upload.ejs
+++ b/views/index/upload.ejs
@@ -1,18 +1,24 @@
-<div style="position: relative;">
-	<lottie-player src="https://assets2.lottiefiles.com/packages/lf20_ZQhQzO.json"  background="transparent"  speed="1" style="width: 700px; margin: 0 40px 0 auto;"  loop  autoplay></lottie-player>
+<div style="
+    position: absolute;
+    z-index: -1;
+    text-align: right;
+    left: 0;
+    top: 0;
+    width: 100%;">
+	<lottie-player src="https://assets2.lottiefiles.com/packages/lf20_ZQhQzO.json"  background="transparent"  speed="1" style="max-width: 700px; margin-right: 100px; display: inline-block;"  loop  autoplay></lottie-player>
 </div>
 
 <div style="position: absolute; padding-top: 70px;">
-	<h1>Upload da sua arte!</h1>
+	<h1>Upload</h1>
 
 	<h2>
 		Faça sua obra fazer parte do nosso site para que mais pessoas vejam ela! 
 	</h2>
 
-	<div class="container-fluid container" style="max-width: 1400px; padding-top: 20px;">
+	<div class="container-fluid container" style="max-width: 800px; padding: 0;">
 		<div class="row">
-			<div class="col-sm-4 coluna">
-				<form id="form" style="padding-top: 70px;">
+			<div class="col-sm-6">
+				<form id="form">
 					<div class="form-group">
 						<label for="imagemobra">Arraste ou clique aqui ↓</label>
 						<input type="file" id="imagemobra" name="imagem" class="form-control" accept="image/jpeg,image/png" />
@@ -32,11 +38,23 @@
 						<label for="sobreobra">Sobre:</label>
 						<input type="text" id="sobreobra" name="sobre" class="form-control" placeholder="(Opcional)" maxlength="250" />
 					</div>
+
+					<div class="form-group">
+						<label for="temaobra">Tipo de Arte:</label><br>
+						<input name="tema" id="temaobra" list="temas" class="form-control">
+					</div>
 				
 					<button type="submit" class="btn btn-primary">Criar</button>
 				</form>
+
+				<datalist id="temas"> 
+					<option>Pinturas</option> 
+					<option>Arte Digital</option> 
+					<option>Fotografia</option> 
+					<option>3D</option>
+				</datalist>
 			</div>
-			<div class="col-sm-8 coluna">
+			<div class="col-sm-6">
 				
 			</div>
 		</div>
@@ -135,5 +153,26 @@
 		position: absolute;
 	}
 
+	h1 {
+    opacity: 1;
+    font-size: 3.7em;
+    background: linear-gradient(to right, hotpink, rgb(255, 255, 255));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 900;
+	padding-left: 50px;
+}
+
+h2 {
+    opacity: 0.7;
+    font-size: 2.7em;
+    background: linear-gradient(to right, rgb(112, 215, 255), rgb(255, 255, 255));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
+	padding-left: 50px;
+}
 </style>
 </style>
