--- a/views/index/explore.ejs
+++ b/views/index/explore.ejs
@@ -7,9 +7,8 @@
 <div class="glide espacamento" id="glide1">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <%for(let i; i<imagens.lenght;i++){
-          <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/<%imagem[i].id%>);"></div>
-         
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Luz_Station.jpg);"></div>
+        <li class="glide__slide"> <div class="imagem-galeria" style="background-image: url(/public/IMGS/Macaco2.jpg);"></div>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
@@ -45,15 +44,15 @@
   <div class="glide espacamento" id="glide3">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
-        <li class="glide__slide"> <img src="/public/IMGS/jacare.png"/></li>
+        <%
+          for (let i = 0; i < artes.length; i++) {
+            if (artes[i].tema == "Fotografia") {
+        %>
+          <li class="glide__slide"> <img src="/public/IMGS/artes/arte<%= artes[i].id_arte %>.jpg"/></li>
+        <%
+            }
+          }
+        %>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
