--- a/views/index/about.ejs
+++ b/views/index/about.ejs
@@ -10,7 +10,7 @@
         <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
             <div class="ficha">
                 <div class="quadrado">
-                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <img src="/public/IMGS/INTEGRANTES/joao.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
                     <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
                 </div>
             </div>
@@ -18,8 +18,8 @@
         <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
             <div class="ficha">
                 <div class="quadrado">
-                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
-                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                    <img src="/public/IMGS/INTEGRANTES/zafs.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">Fernando Zafani Gomes Filho</h5>
                 </div>
             </div>
         </div>
@@ -28,16 +28,16 @@
         <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
             <div class="ficha">
                 <div class="quadrado">
-                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
-                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                    <img src="/public/IMGS/INTEGRANTES/igao.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">Igor Carolino Ruiz</h5>
                 </div>
             </div>
         </div>
         <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
             <div class="ficha">
                 <div class="quadrado">
-                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
-                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                    <img src="/public/IMGS/INTEGRANTES/be.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">Bernardo César de Figueiredo </h5>
                 </div>
             </div>
         </div>
