--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -131,7 +131,7 @@
           <i class="material-icons icons">paid</i>
           <h4>Remuneração Justa</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+        <p>Publique gratuitamente suas artes e com uma baixa taxa nas transições torne suas obras uma fonte lucrativa!</p>
       </div>
     </div>
     <div class="col-sm-4 coluna">
