--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -32,7 +32,7 @@
   </div>
   <div class="media-icons">
     <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a> 
+    <a href="https://www.instagram.com/carlosrafaelgn/" target="_blank"><i class="fa fa-instagram"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a> 
   </div>
   <div class="slider-nav">
