--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -7,27 +7,29 @@
   <video class="video-slide" src="/public/VIDEOS/mixkit-stars-in-space-1610.mp4" autoplay muted loop></video>
   <div class="content active">
     <h1>O que é?<br><span>Arte.</span></h1>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five <i>fratinha pato no truco</i> centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p>"Habilidade ou disposição dirigida para a execução de uma finalidade prática ou teórica, realizada de forma consciente, controlada e racional." A arte é tudo que pode ser usado para se expressar, uma pintura, um objeto, qualquer coisa. Podendo ser a expressão de um sentimento ruim, agoniante, e também até o ápice da felicidade e alegria </p>
     <a href="#">Leia Mais</a>
   </div>
   <div class="content">
     <h1>Expressão<br><span>Audiovisual</span></h1>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p>Os processos interativos, procuram estabelecer a probabilidade da expressão e da criação por meios audiovisuais. Os meios audiovisuais deixam de ser apenas uma ferramenta didática, demandando uma interação continuada que permite mais do que olhar imagens, mas interpretá-las visando à criação de novas mensagens e informações.</p>
     <a href="#">Leia Mais</a>
   </div>
   <div class="content">
     <h1>Cores e <br><span>Imagens</span></h1>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p>Todos os elementos de composição de uma imagem são importantes, porém, dentre todos eles o mais poderoso é a cor. Através das cores e suas harmonias, ele cria climas completamente diferentes e mesmo sem a gente perceber, nos faz mergulhar fundo em certas emoções.</p>
     <a href="#">Leia Mais</a>
   </div>
   <div class="content">
     <h1>luz e <br><span>Fotografia</span></h1>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p>Uma fotografia nada mais é do que a exposição a determinada luz em um equipamento, é isso que forma as cores e composições de uma imagem. Sendo assim, é de suma importância ter completo domínio sobre esse elemento. A luz é um dos elementos mais complexos no universo da fotografia, Para saber usá-la de forma criativa é necessário dominar a técnica.</p>
     <a href="#">Leia Mais</a>
   </div>
   <div class="content">
     <h1>um jeito diferente de <br><span>viver</span></h1>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p>A arte é uma forma completamente única de linguagem, que se expressa de diversas formas: na escrita, na pintura, no teatro e na música, além de muitos outros. Ela está presente em todos os lugares e faz parte de nossas vidas de maneiras que sequer imaginamos.
+
+      Agora que você já sabe o que é a arte, olhe mais atentamente ao seu redor e passe a apreciar mais os pequenos detalhes de seu dia a dia! Essa reflexão é extremamente eficaz para nosso crescimento e amadurecimento pessoal.</p>
     <a href="#">Leia Mais</a>
   </div>
   <div class="media-icons">
@@ -56,7 +58,8 @@
         <h1>Venda</h1>
         <h2>Publique</h2>
         <h3>Compartilhe</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        <p>"Nesse site você pode divulgar suas artes ou compartilhar conteudos artisticos que você aprecia, divulgando e reconhecendo as melhores artes do mercado , aqui no Gallery apoiamos qualquer tipo de arte, você sempre terá sua liberdade de expressão, sem nenhum medo de se libertar através da arte
+          Aqui voce pode compartilhar sua arte, vende-la, ou apenas publica-la e deixa-la exposta para seu reconhecimento!"
         </p>
       </div>
     </div>
@@ -70,9 +73,9 @@
       <div class="card">
         <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Nome_da_Obra</h5>
-          <h6 class="card-text">Por Nome_do_Artista</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">A Noite Estrelada</h5>
+          <h6 class="card-text">Vincent van Gogh</h6>
+          <p class="card-text">A Noite Estrelada é uma pintura de Vincent van Gogh de 1889. A obra retrata a vista da janela de um quarto do hospício de Saint-Rémy-de-Provence, pouco antes do nascer do sol, com a adição de um vilarejo idealizado pelo artista.</p>
           <a href="#" class="btn btn-primary">Veja Mais</a>
         </div>
       </div>
@@ -80,11 +83,11 @@
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/public/IMGS/michelangelo.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Nome_da_Obra</h5>
-          <h6 class="card-text">Por Nome_do_Artista</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">A Criação de Adão</h5>
+          <h6 class="card-text">Michelangelo</h6>
+          <p class="card-text">Esse é um trabalho realizado com a técnica do afresco e integra o conjunto de pinturas feitas no Teto da Capela Sistina, produzidas entre 1508 e 1512 por encomenda do papa Júlio II.</p>
           <a href="#" class="btn btn-primary">Veja Mais</a>
         </div>
       </div>
@@ -96,11 +99,11 @@
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/public/IMGS/ultimaceia.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Nome_da_Obra</h5>
-          <h6 class="card-text">Por Nome_do_Artista</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">A Última Ceia</h5>
+          <h6 class="card-text">Leonardo da Vinci</h6>
+          <p class="card-text">A Última Ceia é uma das obras mais emblemáticas do pintor renascentista Leonardo da Vinci (1452-1519). Nela, o artista retrata a última ceia de Jesus Cristo ao lado de seus apóstolos, momentos antes dele ser crucificado.</p>
           <a href="#" class="btn btn-primary">Veja Mais</a>
         </div>
       </div>
@@ -108,11 +111,11 @@
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/public/IMGS/dali.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Nome_da_Obra</h5>
-          <h6 class="card-text">Por Nome_do_Artista</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">A persistência da memória</h5>
+          <h6 class="card-text">Salvador Dalí</h6>
+          <p class="card-text">Um dos dados que mais espanta no famoso quadro de Salvador Dalí é o tempo de produção: conta-se que A persistência da memória foi pintado em apenas cinco horas.</p>
           <a href="#" class="btn btn-primary">Veja Mais</a>
         </div>
       </div>
@@ -140,7 +143,7 @@
           <i class="material-icons icons">lightbulb</i>
           <h4>Exponha as suas Ideias</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+        <p> Um espaço livre e pratico, para que você possa divulgar qualquer tipo de arte e se expressar!</p>
       </div>
     </div>
     <div class="col-sm-4 coluna">
@@ -149,7 +152,7 @@
           <i class="material-icons icons">fingerprint</i>
           <h4>Deixe a sua Marca</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+        <p> Postando suas artes autorais, você consegue divulga seu nome e torna o site maior!</p>
       </div>
     </div>
   </div>
@@ -160,7 +163,7 @@
           <i class="material-icons icons">add_shopping_cart</i>
           <h4>Compre Projetos</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+        <p>Todas as artes da galeria estao disponiveis para venda, sinta-se a vontade para explorar!</p>
       </div>
     </div>
     <div class="col-sm-4 coluna">
@@ -169,7 +172,7 @@
           <i class="material-icons icons">trending_up</i>
           <h4>Possua Relevância</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+        <p>Seja um artista ativo! Mantenha no possivel as suas artes atualizadas, tentando sempre manter o publico que frequenta suas artes!</p>
       </div>
     </div>
     <div class="col-sm-4 coluna">
@@ -178,7 +181,7 @@
           <i class="material-icons icons">app_shortcut</i>
           <h4>Explore</h4>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+        <p>Busque artes novas, pesquise, mergulhe nas galerias! Pois depois pode ser você que pode inspirar alguém!</p>
       </div>
     </div>
   </div> 
