--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -66,7 +66,7 @@
   </div>
 
 <!-- Cards -->
-  <h1 class="titulos">Nossos Artistas</h1>
+  <h1 class="titulos">Artistas</h1>
   <div class="row c">
 
     <div class="col-sm-6 coluna">
