--- a/views/index/about.ejs
+++ b/views/index/about.ejs
@@ -1,43 +1,41 @@
 ﻿<h1>Sobre nós</h1>
+<p  class="pzinho" style="margin-left: 50px;">Projeto Interdisciplinar II - ESPM TECH / 2º semestre</p>
 
-<h2>O projeto desse site foi criado para se ter um lugar para postarem artes de forma geral, seja uma arte famosa que a pessoa gosta, ou uma arte autoral que ele gostaria que outras pessoas vissem</h2>
+<p style="margin-left: 50px; font-size: 2.5em; color: rgba(78, 78, 78, 0.952);"">Integrantes: </p>
 
-<p style="margin-left: 50px;">Projeto Interdisciplinar II - ESPM TECH / 2º semestre</p>
+<div class="container-fluid container" style="max-width: 1500px; padding-top: 0px;">
 
-<div class="container-fluid container" style="max-width: 1000px;">
-    <h3>Integrantes</h3>
     <div class="row">
-        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+        <div class="col-sm-3 coluna">
             <div class="ficha">
-                <div class="quadrado">
-                    <img src="/public/IMGS/INTEGRANTES/joao.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
-                    <h5 style="margin: 20px;">João Lucas Abreu Nogueira</h5>
+                <div class="quadrado" style="background: linear-gradient(to bottom, rgb(124, 0, 206), rgb(255, 0, 157));">
+                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">Bernardo César de Figueiredo</h5>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+        <div class="col-sm-3 coluna">
             <div class="ficha">
-                <div class="quadrado">
-                    <img src="/public/IMGS/INTEGRANTES/zafs.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
+                <div class="quadrado" style="background: linear-gradient(to bottom, rgb(0, 52, 119),rgb(5, 161, 122));">
+                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
                     <h5 style="margin: 20px;">Fernando Zafani Gomes Filho</h5>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+    
+        <div class="col-sm-3 coluna">
             <div class="ficha">
-                <div class="quadrado">
-                    <img src="/public/IMGS/INTEGRANTES/igao.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
-                    <h5 style="margin: 20px;">Igor Carolino Ruiz</h5>
+                <div class="quadrado" style="background: linear-gradient(to bottom, rgb(105, 2, 62), rgb(255, 115, 115));">
+                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">Igor Carolino </br>Ruiz</h5>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 coluna" style="padding-bottom: 80px;">
+        <div class="col-sm-3 coluna">
             <div class="ficha">
-                <div class="quadrado">
-                    <img src="/public/IMGS/INTEGRANTES/be.jpeg" style="width: 300px; height: 300px; border-radius: 20px; margin: 40px; margin-bottom: 0;">
-                    <h5 style="margin: 20px;">Bernardo César de Figueiredo </h5>
+                <div class="quadrado" style="background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(41, 3, 148));">
+                    <img src="/public/IMGS/INTEGRANTES/WhatsApp Image 2021-11-28 at 12.09.05.jpeg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
+                    <h5 style="margin: 20px;">João Lucas Abreu</br> Nogueira</h5>
                 </div>
             </div>
         </div>
@@ -67,6 +65,16 @@ h1 {
 h2 {
     font-size: 1.7em;
     margin: 0 50px 10px;
+}
+
+.pzinho {
+opacity: 0.7;
+    font-size: 2.7em;
+    background: linear-gradient(to right, rgb(112, 215, 255), rgb(255, 255, 255));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
 }
 
 </style>
