--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -71,7 +71,7 @@
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap">
+        <img class="card-img-top" src="https://esnoticia.sv/wp-content/uploads/2020/10/21-6.jpg" alt="Card image cap" height="200px">
         <div class="card-body">
           <h5 class="card-title">A Noite Estrelada</h5>
           <h6 class="card-text">Vincent van Gogh</h6>
@@ -83,7 +83,7 @@
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src="/public/IMGS/michelangelo.png" alt="Card image cap">
+        <img class="card-img-top" src="/public/IMGS/michelangelo.png" alt="Card image cap" height="200px">
         <div class="card-body">
           <h5 class="card-title">A Criação de Adão</h5>
           <h6 class="card-text">Michelangelo</h6>
@@ -99,7 +99,7 @@
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src="/public/IMGS/ultimaceia.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/public/IMGS/ultimaceia.jpg" alt="Card image cap" height="200px">
         <div class="card-body">
           <h5 class="card-title">A Última Ceia</h5>
           <h6 class="card-text">Leonardo da Vinci</h6>
@@ -111,7 +111,7 @@
 
     <div class="col-sm-6 coluna">
       <div class="card">
-        <img class="card-img-top" src="/public/IMGS/dali.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/public/IMGS/dali.jpg" alt="Card image cap" height="200px">
         <div class="card-body">
           <h5 class="card-title">A persistência da memória</h5>
           <h6 class="card-text">Salvador Dalí</h6>
