--- a/views/index/about.ejs
+++ b/views/index/about.ejs
@@ -9,7 +9,7 @@
         <div class="col-sm-3 coluna">
             <div class="ficha">
                 <div class="quadrado" style="background: linear-gradient(to bottom, rgb(124, 0, 206), rgb(255, 0, 157));">
-                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
+                    <img src="/public/IMGS/INTEGRANTES/be.jpeg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
                     <h5 style="margin: 20px;">Bernardo César de Figueiredo</h5>
                 </div>
             </div>
@@ -17,7 +17,7 @@
         <div class="col-sm-3 coluna">
             <div class="ficha">
                 <div class="quadrado" style="background: linear-gradient(to bottom, rgb(0, 52, 119),rgb(5, 161, 122));">
-                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
+                    <img src="/public/IMGS/INTEGRANTES/zafs.jpeg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
                     <h5 style="margin: 20px;">Fernando Zafani Gomes Filho</h5>
                 </div>
             </div>
@@ -26,7 +26,7 @@
         <div class="col-sm-3 coluna">
             <div class="ficha">
                 <div class="quadrado" style="background: linear-gradient(to bottom, rgb(105, 2, 62), rgb(255, 115, 115));">
-                    <img src="/public/IMGS/flying-whales-marioKoller.jpg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
+                    <img src="/public/IMGS/INTEGRANTES/igao.jpeg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
                     <h5 style="margin: 20px;">Igor Carolino </br>Ruiz</h5>
                 </div>
             </div>
@@ -34,7 +34,7 @@
         <div class="col-sm-3 coluna">
             <div class="ficha">
                 <div class="quadrado" style="background: linear-gradient(to bottom, rgb(0, 0, 0), rgb(41, 3, 148));">
-                    <img src="/public/IMGS/INTEGRANTES/WhatsApp Image 2021-11-28 at 12.09.05.jpeg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
+                    <img src="/public/IMGS/INTEGRANTES/joao.jpeg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
                     <h5 style="margin: 20px;">João Lucas Abreu</br> Nogueira</h5>
                 </div>
             </div>
