--- a/views/index/about.ejs
+++ b/views/index/about.ejs
@@ -27,7 +27,7 @@
             <div class="ficha">
                 <div class="quadrado" style="background: linear-gradient(to bottom, rgb(105, 2, 62), rgb(255, 115, 115));">
                     <img src="/public/IMGS/INTEGRANTES/igao.jpeg" style="width: 250px; height: 250px; border-radius: 20px; margin: 30px; margin-bottom: 0;">
-                    <h5 style="margin: 20px;">Igor </br>Ruiz</h5>
+                    <h5 style="margin: 20px;">Igor Carolino </br>Ruiz</h5>
                 </div>
             </div>
         </div>
